--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require": {
-        "onfido/api-php-client": "^5.0.2",
-        "illuminate/support": "~7.22"
+        "onfido/api-php-client": "^5.1",
+        "illuminate/support": "^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.2",
+        "phpunit/phpunit": "^9.5",
         "graham-campbell/testbench": "^5.5"
     },
     "autoload": {
