Updating namespaces and adding some Laravel structure to the composer file

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": "^7.1.3 || ^8.0",
         "onfido/api-php-client": "^5.2",
         "illuminate/support": "^8.0"
     },
@@ -20,12 +21,24 @@
     },
     "autoload": {
         "psr-4": {
-            "andrevalentin\\Onfido\\": "src/andrevalentin/Onfido"
+            "AndreValentin\\Onfido\\": "src/andrevalentin/Onfido"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "andrevalentin\\Onfido\\Tests\\": "tests/"
+            "AndreValentin\\Onfido\\Tests\\": "tests/"
         }
-    }
+    },
+    "extra": {
+        "laravel": {
+            "aliases": {
+                "Onfido": "AndreValentin\\Onfido\\Facades\\Onfido"
+            },
+            "providers": [
+                "AndreValentin\\Onfido\\OnfidoServiceProvider"
+            ]
+        }
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
