--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": "^7.1.3 || ^8.0",
-        "onfido/api-php-client": "^5.2",
+        "onfido/api-php-client": "^5.2 || ^6.0",
         "illuminate/support": "^8.0"
     },
     "require-dev": {
